# cota

./: .gitignore  ALL text.docx  Cargo.toml  FrontEndDesign.md  README.md  RULES.md  index.html
client/: package-lock.json
client/src/: index.tsx
client/src/components/: Board.module.css  Board.tsx  Cell.tsx  Piece.tsx  River.tsx
legacy/: FrontEndDesign.md
legacy/client/public/: Chess symbols in Unicode - Wikipedia.html
legacy/client/src/: App.tsx  base.css
legacy/client/src/components/: Board.module.css  Board.tsx  CellLayer.tsx
legacy/server/: testJoinGame.py
legacy/server/api/: matchmaking.rs  mod.rs
legacy/server/websocket/: event.rs  message.rs  mod.rs
server/: Cargo.toml  testClient.py  testCreateGame.py
server/src/: gameManager.rs  game_manager.rs  main.rs
server/src/api/: matchmaking.rs
server/src/cota/: board.rs  game.rs  mod.rs  space.rs
server/src/websocket/: event.rs  mod.rs
src/: api.rs  main.rs
src/api/: client.rs  messages.rs  mod.rs
src/cota/: board.rs  color.rs  file.rs  game.rs  mod.rs  move.rs  piece.rs  position.rs  rank.rs  space.rs  tests.rs
src/handler/: mod.rs
src/ws/: client.rs  mod.rs
