[package]
name = "cota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.27.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
log = "0.4.17"
url = "2.3.1"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
hyper = { version = "0.14.25", default-features = false, features = ["http1", "server", "tcp"] }
